added conference.jar